eks-deployment/2.Expose-with-NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2048-1
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048-1
---
apiVersion: v1
kind: Service
metadata:
  name: service-2048-2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048-2
