eks-deployment/3.ALB-ingress-setup.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
# ALB ingress controller file MUST expects a / route, you can have /api or anything. but keep a / route
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: service-2048-1
              port:
                number: 80
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-2048-2
              port:
                number: 80
